--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,56 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            clientId: 274263461230-alcc6i9jd9ra1d00cs2p9dl8d5empo83.apps.googleusercontent.com
+            clientSecret: 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
+            scope:
+              - email
+              - profile
+          naver:
+            clientId: _xWM4qeMBr2FzNdGdWaQ
+            clientSecret: XQ1t4NLRLt
+            clientAuthenticationMethod: post
+            authorizationGrantType: authorization_code
+            redirectUri: "http://localhost:8080/login/oauth2/code/naver"
+            scope:
+              - nickname
+              - email
+              - profile_image
+            clientName: Naver
+          kakao:
+            clientId: 838da266bfdeb74b42a44cf100837412
+            clientSecret: aY0Jblok0rMQIMLadPXnX1jRrbbuRK0h
+            clientAuthenticationMethod: post
+            authorizationGrantType: authorization_code
+            redirectUri: "http://localhost:8080/login/oauth2/code/kakao"
+            scope:
+              - profile_nickname
+              - profile_image
+              - account_email
+            clientName: Kakao
+        provider:
+          naver:
+            authorizationUri: https://nid.naver.com/oauth2.0/authorize
+            tokenUri: https://nid.naver.com/oauth2.0/token
+            userInfoUri: https://openapi.naver.com/v1/nid/me
+            userNameAttribute: response
+          kakao:
+            authorizationUri: https://kauth.kakao.com/oauth/authorize
+            tokenUri: https://kauth.kakao.com/oauth/token
+            userInfoUri: https://kapi.kakao.com/v2/user/me
+            userNameAttribute: id
+
+
+
 
 logging:
   level:
     org.hibernate.SQL: debug
+
+
 
